RESOLVED FIXED95607
REGRESSION (r127252): incomplete repaint on Flash element after pinch to zoom
https://bugs.webkit.org/show_bug.cgi?id=95607
Summary REGRESSION (r127252): incomplete repaint on Flash element after pinch to zoom
Brady Eidson
Reported 2012-08-31 14:00:07 PDT
REGRESSION (r127252): incomplete repaint on Flash element after pinch to zoom This is because Widgets (like plug-ins) don't play well with transforms and zooming, so clipRectInWindowCoordinates() was giving us a bogus answer. In radar as <rdar://problem/12217897>
Attachments
Patch (3.06 KB, patch)
2012-08-31 14:10 PDT, Brady Eidson
simon.fraser: review+
Brady Eidson
Comment 1 2012-08-31 14:10:07 PDT
Created attachment 161771 [details] Patch Patch developed on the branch, but moving over to trunk right now - plan to land on trunk.
Brady Eidson
Comment 2 2012-08-31 14:18:54 PDT
Note You need to log in before you can comment on or make changes to this bug.