       REGRESSION (r127252): incomplete repaint on Flash element after pinch to zoom        <rdar://problem/12217897> and https://bugs.webkit.org/show_bug.cgi?id=95607

Reviewed by Simon Fraser.

       * WebProcess/Plugins/PluginView.cpp:
       (WebKit::PluginView::viewGeometryDidChange): Only give the window coordinate clip rect a chance
 to override the boundsRect() if the page scale factor is 1.

Canonical link: https://commits.webkit.org/113478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127319 268f45cc-cd09-0410-ab3c-d52691b4dbfc